--- a/app/src/main/res/menu/fragment_camera_list.xml
+++ b/app/src/main/res/menu/fragment_camera_list.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/menu_item_nova_camera"
           android:icon="@android:drawable/ic_menu_add"
           android:title="@string/new_camera"
+          app:showAsAction="ifRoom|withText"
           />
 </menu>
